# koan-framework

./: .dockerignore  .editorconfig  .gitignore  AUTOCONFIGURE_FLOW_EXAMPLES.md  CLAUDE.md  CLD_EXTERNAL_ID_GENERATION_FIX.md  CLD_FLOW_LIFECYCLE_INTERCEPTORS.md  CLD_FLOW_MESSAGE_ROUTING_ARCHITECTURE.md  CLD_FLOW_REFACTORING_PROPOSAL.md  CLD_LOCATION_STANDARDIZATION.md  CLD_ORCHESTRATOR_BIDIRECTIONAL_PATTERN.md  CLD_SORA_MCP_INTEGRATION_PLAN.md  CONTRIBUTING.md  DCO  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  EXTERNAL_ID_CORRELATION_PROPOSAL.md  FLOW_DELTA_IMPLEMENTATION_PLAN.md  FLOW_MESSAGING_UNDERSTANDING.md  FLOW_REFACTORING_PROPOSAL.md  FLOW_REMAINING_WORK.md  Koan.CoreOnly.slnf  Koan.DataOnly.slnf  Koan.Full.slnf  Koan.WebOnly.slnf  Koan.sln  LICENSE  NOTICE  PHASE1_IMPLEMENTATION_RESULTS.md  PHASE2_IMPLEMENTATION_RESULTS.md  PROP-canon-overhaul-comparison.md  PROP-canon-overhaul.md  README-S1.md  README-old.md  README.md  REF_SORA_ADVANCED_TOPICS.md  REF_SORA_ARCHITECTURE_GUIDE.md  REF_SORA_AUTHENTICATION_GUIDE.md  REF_SORA_BACKGROUNDSERVICES.md  (+36 more)
other/zen-garden/: .gitattributes  .gitignore  API-ERROR-STANDARDIZATION.md  ARCHITECTURE.md  BUILD-DISTRIBUTION.md  Cargo.toml  DEPLOYMENT-GUIDE.md  DEVELOPMENT-PLAN.md  Dockerfile.build  Dockerfile.moss  Dockerfile.test-firstboot  IMPLEMENTATION-COMPLETE.md  MANIFEST-TEST-RESULTS.md  MOSS-CONSOLE-OUTPUT-DESIGN.md  MOSS-INSTRUMENTATION-CANDIDATES.md  MOSS-LANTERN-REFACTORING-ANALYSIS.md  PHASE1_VALIDATION_RESULTS.md  RAKE-REFACTORING-SPECIFICATION.md  README.md  TOPOLOGY_ANNOUNCEMENT_IMPLEMENTATION.md  ZEN-QUICK-REFERENCE.md  garden-moss.toml.example  moss.toml.example  run-tests.ps1  test-first-boot.ps1  test-firstboot.sh  test-in-container.sh  test-script.sh  test-simple.ps1  test-v1-api.ps1  version.json
other/zen-garden/docs/: API-ARCHITECTURE-V1-EVALUATION.md  API-REFERENCE.md  API-V1-DUAL-LAYER-DESIGN.md  ASYNC-JOB-API.md  CANON_MANIFEST.md  CLI-API-SURFACE-ANALYSIS.md  CLI-COMMAND-REFERENCE.md  CLI-V1-MIGRATION.md  CONTAINER-DIAGNOSTICS-PLAN.md  EWASTE-TEST-PLAN.md  HARDWARE.md  IMPLEMENTATION-PLAN-V2.md  MISSION.md  MOSS-CONFIG.md  MOSS-CROSS-PLATFORM-REFACTOR.md  OFFERING-MODES-DATA-POPULATION.md  OFFERING-MODES-IMPLEMENTATION-COMPLETE.md  PORT-ALLOCATION.md  QA_CHECKLIST.md  README.md  REFERENCE.md  ROADMAP.md  RUST-REFACTORING-STATUS.md  SECURITY-SPEC.md  SERVICE-INVENTORY.md  START_HERE.md  STONE-INSTALLATION-FLOW.md  STORIES.md  STRAY_REPORT.md  TECHNICAL-SPEC.md  UNDERSTANDING.md  UUID-V7-MIGRATION.md  UX-RAKE-CLI-ANALYSIS.md  V1-IMPLEMENTATION-COMPLETE.md  WATCH-COMMAND.md  WINDOWS-MOSS-EVALUATION.md  glossary.md  network-singleton-pattern.md
other/zen-garden/docs/architecture/: joy-in-infrastructure.md
other/zen-garden/docs/archive/: AGNOSTIC-SIDECARS.md  AUTO-CONFIGURATION-PROPOSAL-V2.md  AUTO-CONFIGURATION-PROPOSAL.md  EVALUATION-ARCHIVE.md  GARDEN-AGENT-SPEC.md  IMPLEMENTATION-ROADMAP.md  MOSS-RAKE-FEATURE-SPEC.md  README.md  SECURITY-TEAM-POND-REVIEW.md  SECURITY-TEAM-REVISED-ASSESSMENT.md  SECURITY.md
other/zen-garden/docs/concepts/: architecture.md  overview.md
other/zen-garden/docs/decisions/: API-0001-dual-layer-api.md  API-0002-admin-hierarchy.md  BUILD-0001-versioning.md  COMPAT-0001-compatibility.md  LANTERN-0001-registry.md  LANTERN-0001-service-registry-architecture.md  LANTERN-0003-mdns-service-discovery.md  MDNS-0001-single-service-type.md  MOSS-0001-registry.md  OFFER-0001-taxonomy.md  RAKE-0010-tending-cached-endpoint-resolution.md  README.md  REFACTORING-PLAN-chirp-protocol.md  SECURITY-0001-pond-tiers.md  SECURITY-0002-keystone-rename.md  SECURITY-0003-keystone-protection-tiers.md  STATE-0001-stateless-moss.md  TOPO-0001-unified-announcement-system.md
other/zen-garden/docs/guides/: first-stone.md  hardware.md  offering-services.md  troubleshooting.md
other/zen-garden/docs/ops/: build-distribution.md  build-optimization.md  maintainers.md  release-notes.md  roadmap.md
other/zen-garden/docs/pillars/: empirical-specification.md  humanist-infrastructure.md  pillar-discovery.md  pillar-failure-weather.md  pillar-joy.md  pillar-offerings.md  pillar-security-pond.md  stone-against-the-clouds.md  the-metaphor-is-the-architecture.md
other/zen-garden/docs/proposals/: CLI-API-TAXONOMY-V1-ZEN.md  CLI-API-TAXONOMY-V1.md  CLI-API-TAXONOMY-V2-FINAL.md  CLI-DUAL-ERGONOMICS-DISCUSSION.md  CLI-TAXONOMY-IMPLEMENTATION-STATUS.md  GARDEN-NAMING-ASSESSMENT-REVIEW.md  LANTERN-SERVICE-PROPOSAL.md  PEBBLE-ANDROID-COMPUTE-TIER.md  PROPOSAL-VALIDATION-SUMMARY.md  SRC-REFACTOR-CHECKLIST.md  SRC-REFACTOR-PROPOSAL.md  SRC-REFACTOR-SUMMARY.md  STONE-LIFECYCLE-OPERATIONS.md  bridges.md  ceremonies.md  cli-taxonomy.md  firefly.md  intelligent-offering-placement.md  naming-assessment.md  offering-modes.md  passphrase-generation-ux.md  rake-refactoring-proposal.md  stone-lifecycle.md  stone-profiles.md  totp-admission.md  unified-deployment-packages.md  zen-garden-guide-phone-stones.md  zen-garden-offerings-catalog.md  zen-garden-spec-cricket.md  zen-garden-spec-discovery.md  zen-garden-spec-find-command.md  zen-garden-spec-topology-caching.md
other/zen-garden/docs/reference/: ZEN-GARDEN-DRIVER-SPEC.md  ai-navigation.md  api.md  config.md  connection-strings.md  offerings.md  ports.md  system-architecture.md
other/zen-garden/docs/security/: overview.md  pond-setup.md  threat-analysis.md
other/zen-garden/docs/specs/: api-v1.md  discovery.md  moss-daemon.md  offerings.md  (+3 more)
other/zen-garden/installer/: NewStone.ps1  build-linux.ps1  build-windows.ps1  dist.ps1  garden-upgrade.sh  manual-fix-moss.ps1  moss-update-helper.sh  moss.toml.example  push-ssh-direct.ps1  push2all.ps1  sudoers.d-moss  test-moss-local.ps1
other/zen-garden/manifests/: COMPATIBILITY_SOURCES.md  README.md  category.schema.json  taxonomy.dictionary.yaml
other/zen-garden/offerings/: QUICKSTART.md  README.md
other/zen-garden/scripts/: AiDocDist.ps1
other/zen-garden/tests/: IMPLEMENTATION-COMPLETE.md  README.md  TEST-RESULTS-SUMMARY.md  docker-compose.test.yml  run-feature-tests.ps1  test-results.json
(+11941 files in other folders)
