[package]
name = "garden-common"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
mdns-sd = "0.7"
chrono = "0.4"
thiserror = "1.0"

[lib]
path = "src/lib.rs"
