[package]
name = "garden-common"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Reduced from "full" - library only needs: sync primitives, time utilities
tokio = { version = "1.35", features = ["sync", "time", "macros"] }
mdns-sd = "0.11"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1.0"
async-trait = "0.1"
async-stream = "0.3"
tokio-stream = "0.1"
futures = "0.3"

[dev-dependencies]
tempfile = "3.8"

[lib]
path = "src/lib.rs"
