[package]
name = "garden-lantern"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "garden-lantern"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
blake3 = "1.5"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
local-ip-address = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { workspace = true }
toml = "0.8"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.0", features = ["v7", "serde"] }
garden-common = { path = "../common" }
