[package]
name = "garden-moss"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "garden-moss"
path = "src/main.rs"

[dependencies]
garden-common = { path = "../common" }
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bollard = "0.16"
mdns-sd = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
base64 = "0.21"
chrono = "0.4"
clap = { version = "4.4", features = ["derive", "env"] }
futures-util = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
toml = "0.8"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }
sysinfo = "0.30"
local-ip-address = "0.6"
uuid = { version = "1.6", features = ["v7"] }
rand = "0.8"
async-stream = "0.3"
blake3 = "1.5"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["process", "signal"] }

[build-dependencies]
garden-build-utils = { path = "../build-utils" }
