[package]
name = "garden-moss"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "garden-moss"
path = "src/main.rs"

[dependencies]
garden-common = { path = "../common" }
# Reduced from "full" - server needs: multi-thread runtime, networking, signals, process spawning
tokio = { version = "1.35", features = ["rt-multi-thread", "io-util", "net", "signal", "process", "fs", "sync", "time", "macros"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bollard = "0.16"
mdns-sd = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
base64 = "0.21"
chrono = "0.4"
clap = { version = "4.4", features = ["derive", "env"] }
futures-util = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
regex = "1.10"
toml = "0.8"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }
sysinfo = "0.30"
local-ip-address = "0.6"
uuid = { version = "1.6", features = ["v7"] }
rand = "0.8"
async-stream = "0.3"
blake3 = "1.5"
socket2 = "0.5"
async-trait = "0.1"
dashmap = "5.5"
chacha20poly1305 = "0.10"
argon2 = "0.5"
walkdir = "2.4"
url = "2.5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Networking_WinSock",
    "Win32_Storage_FileSystem",
    "Win32_Foundation"
] }
windows = { version = "0.52", features = [
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common"
] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["process", "signal"] }

[build-dependencies]
garden-build-utils = { path = "../build-utils" }
