[package]
name = "garden-rake"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
garden-common = { path = "../common" }
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
mdns-sd = "0.7"
anyhow = "1.0"
base64 = "0.22"
bytes = "1.5"
chrono = "0.4"
dirs = "5.0"
futures-util = "0.3"
once_cell = "1.19"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v7"] }

[build-dependencies]
garden-build-utils = { path = "../build-utils" }

[[bin]]
name = "garden-rake"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
